--- a/css/Fernando.css
+++ b/css/Fernando.css
@@ -19,19 +19,38 @@
     background-color:var(--negro);
     padding-top: 10rem;
 }
-.titulo{
+.titulo-Fernando{
     height: auto;
-    width: 35rem;
+    width: 34rem;
     text-align: center;
     margin: auto;
     color: var(--blanco);
     font-size: 2rem;
 }
-.texto{
+.texto-Fernando{
     height: auto;
     width: 35rem;
     margin-top: 1.5rem;
     margin-left: 2.8rem;
     color: var(--gris);
     font-size: 1.7rem;
+}
+.caja1-Fernando, .caja2-Fernando, .caja3-Fernando, .caja4-Fernando{
+    width: 34rem;
+    height: 24rem;
+    margin: auto;
+    margin-top: 2rem;
+    background-color: var(--negro2);
+    -webkit-box-shadow: 0px 6px 2px -3px rgba(0,0,0,0.56);
+-moz-box-shadow: 0px 6px 2px -3px rgba(0,0,0,0.56);
+box-shadow: 0px 6px 2px -3px rgba(0,0,0,0.56);
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+}
+.reloj, .ojo, .dolar, .cheque{
+    width: 4rem ;
+    height: auto;
+    margin-top: 2rem;
+    margin-left: 2rem;
 }
