--- a/css/Fernando.css
+++ b/css/Fernando.css
@@ -36,8 +36,8 @@
     font-size: 1.7rem;
 }
 .caja1-Fernando, .caja2-Fernando, .caja3-Fernando, .caja4-Fernando{
-    width: 34rem;
-    height: 24rem;
+    width: 33rem;
+    height: 20rem;
     margin: auto;
     margin-top: 2rem;
     background-color: var(--negro2);
@@ -49,8 +49,21 @@ box-shadow: 0px 6px 2px -3px rgba(0,0,0,0.56);
     flex-direction: column;
 }
 .reloj, .ojo, .dolar, .cheque{
-    width: 4rem ;
+    width: 3rem ;
     height: auto;
     margin-top: 2rem;
     margin-left: 2rem;
+}
+.titulo-cajas{
+        color: var(--blanco);
+        font-size: 2.2rem;
+        margin-left: 2rem;
+        margin-top: 1rem;
+}
+p{
+    margin-top: 0.5rem;
+    margin-left: 2rem;
+    margin-right: 0.5rem;
+    color: var(--gris);
+    font-size: 1.5rem;
 }
