--- a/css/Fernando.css
+++ b/css/Fernando.css
@@ -78,9 +78,9 @@ box-shadow: 0px 6px 2px -3px rgba(0,0,0,0.56);
         
     }
     .caja1-2, .caja2-2, .caja3-2, .caja4-2{
-        width: 30rem;
-        height: 15rem;
-       
+        width: 28rem;
+        height: 14rem;
+        margin-left: 1rem;
     }
     .titulo-2{
         margin-top: 5rem;
@@ -89,9 +89,9 @@ box-shadow: 0px 6px 2px -3px rgba(0,0,0,0.56);
         margin-top: 2rem;
     }
     .titulo-cajas2{
-        font-size: 1.8rem;
+        font-size: 1.6rem;
     }
     .texto-cajas2{
-        font-size: 1.3rem;
+        font-size: 1.1rem;
     }
 }
