--- a/css/css.css
+++ b/css/css.css
@@ -24,3 +24,22 @@ section{
     width:  37.5rem;
     margin: auto;
 }
+.body-error{
+    background-color: var(--gris);
+}
+.error{
+    width:auto;    
+    height:auto;
+    margin-left: 60rem;
+    margin-top: 20rem;
+    
+}
+.num{
+    font-size: 20rem;
+    padding-left:5rem;
+    color: var(--naranja);
+}
+.texto-error{
+    font-size: 5rem;
+    color: var(--negro);
+}
