Se arreglo tamaños y el responsive

--- a/css/JuanPablo.css
+++ b/css/JuanPablo.css
@@ -8,11 +8,17 @@
 .Imagen{
     width: 37.5rem;
     height: 24.5rem;
-    background-image: url(../img/bitcoinbaby1.svg);
+}
+.Img1{
+    width: 37.5rem;
+    height: 25rem;
 }
 .Text-imagen{
-    padding-top: 4rem;
-    padding-left: 14rem;
+    position: relative;
+    bottom: 20rem;
+    padding-left: 13.5rem;
+    color: var(--blanco);
+    
 }
 .Text-plan{
     text-align: center;
@@ -31,12 +37,12 @@
 .Cajas{
     width: 37.4rem;
     height: 24.5rem;
-    flex-grow: 4;
     padding-top: 3rem;
-        max-width: 100%;
+    display: flex;
+    overflow-y:scroll;
 }
 .Cajas1{
-     overflow-x: scroll;
+     overflow-x:scroll;
       max-width: 100%;
         display: flex;
     align-items: center;
@@ -46,10 +52,16 @@
 }
 .Cajas2{
     width: 37.4rem;
+    overflow-x:scroll;
     height: 21.5rem;
-    display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-gap: .5rem;    
+    grid-gap: .5rem;  
+    display: grid;
+}
+.Cajas::-webkit-scrollbar {
+    display: none;
+}.Cajas2::-webkit-scrollbar {
+    display: none;
 }
 .Cajas1::-webkit-scrollbar {
     display: none;
@@ -58,25 +70,58 @@
     position: relative;
   background-color: var(--blanco);
     display: inline-block;   
-    width: 15rem;
+    width: 13rem;
     height: 21.5rem;
-    opacity: 50%;
-    left: -6.5rem;
+    left: -5rem;
     border-radius: 0.5rem;
+}
+.TextoDePago1{
+    position: relative;
+    font-size: 1.1rem;
+    left: 3rem;
+    top: 2.6rem;
+}
+.precios1{
+    position: relative;
+    font-size: 3.5rem;
+    left: 3rem;
+    top: 3.4rem;
+}
+.PrecioEnDolar1{
+    font-size: 1.5rem; 
+}
+.Descripcion1{
+    position: relative;
+    text-align: center;
+    color: var(--gris);
+    top: 3rem;
+    font-size: 0.8rem;
+    top: 5rem;
+}
+.TextoBoton1{
+    position: relative;
+    top: 8rem;
+    left: 2rem;
+    width: 9rem;
+    height: 3rem;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid var(--naranja);
+    background-color: var(--blanco-claro);
 }
 .ch2{
     position: relative;
-    left: -4.5rem;
+    left: -2.5rem;
   background-color: var(--blanco);
-    width: 15rem;
+    width: 13.5rem;
     height: 21.5rem;
     border-radius: 0.5rem;
 }
 .CajaNaranja{
     position: relative;
-    left: 3.8rem;
+    left: 3rem;
     bottom: 0.5rem;
-    height: 2rem;
+    height: 2rem; 
     width: 7.5rem;
     text-align: center;
     background-color: var(--naranja);
@@ -88,13 +133,13 @@
 .TextoDePago{
     position: relative;
     font-size: 1.1rem;
-    left: 4.5rem;
+    left: 3.7rem;
     top: 0.5rem;
 }
 .precios{
     position: relative;
     font-size: 3.5rem;
-    left: 3.8rem;
+    left: 3rem;
     top: 1.3rem;
 }
 .PrecioEnDolar{
@@ -110,7 +155,7 @@
 .TextoBoton {
     position: relative;
     top: 6rem;
-    left: 3rem;
+    left: 2.3rem;
     width: 9rem;
     height: 3rem;
     align-items: center;
@@ -121,10 +166,9 @@
 .ch3{
     position: relative;
   background-color: var(--blanco);
-    width: 15rem;
+    width: 13rem;
     height: 21.5rem; 
-    left: -2.5rem;
-    opacity: 50%;
+    left: -0.5rem;
     border-radius: 0.5rem;
     
 }
@@ -163,13 +207,67 @@
 .Batata{
     width: 6.4rem;
 }
-@media screen and (min-width: 416px){
+@media screen and (min-width: 600px){
     .JuanPablo{
-        width: 100%;
+        width: 48rem;
         background-color: var(--blanco-claro);
     }
-    .Imagen{
-        width: 100%;
-        background-image: url(../img/bitcoinbaby2.svg);
+    .Text-imagen{
+        left: 5rem;
+    }
+    .Img1{
+        width: 48rem;
+        display: flex;
+    }
+    .Cajas{
+        width: 47.8rem;
+    }
+    .Cajas1{
+        width: 47.8rem;
+    }
+    .Cajas2{
+        width: 47.8rem;
+    }
+    .ch1{
+        float: left;
+        left: 1rem;
+    }
+    .ch2{
+        left: 1rem;
+    }
+    .ch3{
+        left: 2rem;
+    }
+    }
+    @media screen and (min-width: 1200px){
+        .JuanPablo{
+            width: 84.2rem;
+            background-color: var(--blanco-claro);
+        }
+        .Img1{
+            width: 84.2rem;
+            display: flex;
+        }
+        .Text-imagen{
+            left: 23rem;
+        }
+        .Cajas{
+            width: 84rem;
+        }
+        .Cajas1{
+            width: 84rem;
+        }
+        .Cajas2{
+            width: 84rem;
+        }
+        .ch1{
+            float: left;
+            left: 12rem;
+        }
+        .ch2{
+            left: 7rem;
+        }
+        .ch3{
+            left: 2rem;
     }
 }
